# osx-cleaner

./: Cargo.toml  README.md
.github/workflows/: workflow.yml
src/: lib.rs  logger.rs
src/cli/: commands.rs  mod.rs
src/core/: cleaner.rs  cleaner_orchestrator.rs  mod.rs  uninstaller.rs  version.rs
src/core/cleaners/: browser_caches.rs  crash_reporter_logs.rs  large_files.rs  mod.rs  system_caches.rs  temporary_files.rs  trash.rs  user_caches.rs  user_logs.rs
src/utils/: filesystem.rs
